# W255repo

fall23-tianling0625/lab_1/: run.sh
fall23-tianling0625/lab_1/lab1/: Dockerfile  README.md  pyproject.toml
fall23-tianling0625/lab_2/lab2/: Dockerfile  README.md  pyproject.toml  run.sh
fall23-tianling0625/lab_2/lab2/src/: main.py  model_pipeline.pkl
fall23-tianling0625/lab_2/lab2/tests/: test_lab2.py
fall23-tianling0625/lab_2/lab2/trainer/: train.py
fall23-tianling0625/lab_3/lab3/: Dockerfile  README.md  model_pipeline.pkl  pyproject.toml  run.sh
fall23-tianling0625/lab_3/lab3/infra/: deployment-pythonapi.yaml  deployment-redis.yaml  namespace.yaml  service-prediction.yaml  service-redis.yaml
fall23-tianling0625/lab_3/lab3/src/: main.py
fall23-tianling0625/lab_3/lab3/tests/: test_predict_and_bulk.py
fall23-tianling0625/lab_3/trainer/: train.py
fall23-tianling0625/lab_4/lab4/: README.md  deploy.sh  model_pipeline.pkl  pyproject.toml  run.sh
fall23-tianling0625/lab_4/lab4/infra/: deployment-lab3.yaml  deployment-redis.yaml  namespaces.yaml  service-app.yaml  service-redis.yaml
fall23-tianling0625/lab_4/lab4/src/: main.py
fall23-tianling0625/lab_4/lab4/tests/: test_hello.py
fall23-tianling0625/lab_5/: Findings.md  README.md  load.js
fall23-tianling0625/project/: README.md  load.js
fall23-tianling0625/project/mlapi/: Dockerfile  deploy.sh  docker-compose.yml  pyproject.toml  run.sh
fall23-tianling0625/project/mlapi/infra/: config_map.yaml  deployment-project.yaml  deployment-redis.yaml  service-prediction.yaml
fall23-tianling0625/project/mlapi/src/: main.py
fall23-tianling0625/project/mlapi/tests/: test_mlapi.py
fall23-tianling0625/project/trainer/: train.py
main/: .devcontainer.json  .markdownlint.yml  .pre-commit-config.yaml  .yamllint  Dockerfile  README.md  pyproject.toml
main/demos/bad_schema_client_api/: raise.py
main/demos/data_transform_api/: curl_calls.sh  pipeline_sk.py
main/demos/docker_demo/: Dockerfile  nginx-deployment.yaml  node-serice.yml
main/demos/docker_hello/docker/: Dockerfile  pyproject.toml
main/demos/docker_hello/docker/tests/: test_docker.py
main/demos/flask_ci_demo/: main.py  requirements.txt
main/demos/flask_ci_demo/api/: app.py
main/demos/flask_ci_demo/resources/: default.py
main/demos/flask_ci_demo/tests/: test_root.py
main/demos/impute_api/: impute.py  pipe.pkl  train_pipeline.py
main/demos/kustomize_skaffold_demo/: Dockerfile  package.json  skaffold.yaml  tsconfig.json
main/demos/kustomize_skaffold_demo/.k8s/bases/: deployment.yaml  kustomization.yaml
main/demos/kustomize_skaffold_demo/.k8s/bases/cloud-spanner-emulator/: deployment.yaml  kustomization.yaml
main/demos/kustomize_skaffold_demo/.k8s/bases/redis/: deployment.yaml
main/demos/kustomize_skaffold_demo/.k8s/local-dev/: kustomization.yaml
main/demos/kustomize_skaffold_demo/spanner-dds/: schema.sql  songs.sql
main/demos/kustomize_skaffold_demo/src/: Song.ts  config.ts  logger.ts  models.router.ts  redis-store.ts  songs.router.ts  test.ts
main/demos/lr_redis/: app.py
main/demos/ml_api/: app.py  config.py  deployment.yaml  docker-compose.yaml
main/demos/model_predictions_api/: model.joblib  simple_sk.py  train.py
main/demos/poetry/demo/: pyproject.toml
main/demos/poetry/demo/demo/: main.py
main/demos/poetry/demo/tests/: test_demo.py
main/demos/pytest/testing_demo/: pyproject.toml
main/demos/pytest/testing_demo/testing_demo/: main.py
main/demos/pytest/testing_demo/tests/: test_testing_demo.py
main/demos/redis_api/: app.py  app_cache.py  config.py
main/demos/redis_demo/: cache.py  test.py
main/demos/retraining/container/: Dockerfile  requirements.txt  train_pipeline.py
main/demos/retraining/object/: pipe.pkl  requirements.txt  train_pipeline.py
main/demos/retraining/registry/: Dockerfile  app.py  requirements.txt  train_pipeline.py
main/demos/secrets_management/: test.txt
main/demos/stateful/: kubegres.yaml  postgres-secret.yaml  postgres.yaml
main/demos/validation_features/: feature_validation_sk.py  model.pkl  train.py
main/demos/what_is_an_api/.github/workflows/: ci.yml
main/demos/what_is_an_api/api/: config.py
main/demos/what_is_an_api/resources/: default.py
main/infra/: .gitignore  acr.tf  aks.tf  db.tf  dns.tf  k8s_config.tf  k8s_config_teams.tf  locals.tf  logging.tf  main.tf  output.tf  rg.tf  secrets.tf  security.tf  variables.tf  vm.tf  vnet.tf
main/infra/cluster_configure/: bootstrap_aks.sh  grafana.yaml  helmfile.yaml  jaeger.yaml  kiali.yaml  loki.yaml  prometheus.yaml
main/infra/github/: pyproject.toml
main/infra/github/runner/: db.py  main.py
main/infra/github/tests/: test_github.py
main/labs/: .gitignore
main/labs/lab1/: README.md
main/labs/lab1/solution/lab1/: Dockerfile  README.md  pyproject.toml  run.sh
main/labs/lab1/solution/lab1/src/: main.py
main/labs/lab1/solution/lab1/tests/: test_lab1.py
main/labs/lab2/: README.md
main/labs/lab2/solution/lab2/: Dockerfile  README.md  pyproject.toml  run.sh
main/labs/lab2/solution/lab2/src/: main.py
main/labs/lab2/solution/lab2/tests/: test_hello.py  test_predict.py
main/labs/lab2/solution/trainer/: train.py
main/labs/lab2/trainer/: predict.py  pyproject.toml
main/labs/lab3/: README.md
main/labs/lab3/solution/lab3/: Dockerfile  README.md  pyproject.toml
main/labs/lab3/solution/lab3/infra/: config_map.yaml
main/labs/lab3/solution/lab3/src/: main.py
main/labs/lab3/solution/lab3/tests/: test_predict.py
main/labs/lab4/: README.md
main/labs/lab4/.k8s/base/: config-map.yaml  deployment-lab4.yaml  deployment-redis.yaml  kustomization.yaml  service-lab4.yaml
main/labs/lab4/.k8s/overlays/dev/: kustomization.yaml  namespace.yaml
main/labs/lab4/.k8s/overlays/prod/: kustomization.yaml  patch-deployment-lab4.yaml  virtual-service.yaml
main/labs/lab5/: Findings.md  README.md  load.js
main/labs/project/: README.md  example.py  grader.sh  load.js
main/labs/project/mlapi/: pyproject.toml
main/labs/project/mlapi/src/: main.py
main/labs/project/mlapi/tests/: test_mlapi.py
(+19 files in other folders)
