[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["Tianyu Wang"]

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
requests = "^2.31.0"
scikit-learn = "1.3.0"
joblib = "^1.3.2"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.9.1"
isort = "^5.12.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
