[tool.poetry]
name = "lab3"
version = "0.2.0"
description = ""
authors = ["James Winegar <jameswine@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
requests = "^2.31.0"
joblib = "^1.3.2"
scipy = "^1.11.3"
scikit-learn = "1.3.1"
fastapi-cache2 = "0.1.9"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.10.0"
isort = "^5.12.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
