[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["James Winegar <jameswine@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.9.1"
isort = "^5.12.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
